explain diff between hierarchy and phylo trees (#364)

--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -120,6 +120,21 @@ head(getUniqueFeatures(tse, rank = "Phylum"))
 
 ### Generate a hierarchy tree on the fly {#sec-fly-tree}
 
+A hierarchy tree is not an actual phylogenic tree.
+A phylogenic tree represents evolutionary relationships among organisms while
+a hierarchy tree organizes species into a hierarchical structure based on their 
+taxonomic ranks.
+
+For instance, the TreeSummarizedExperiment  Tengeler2020 contains an actual
+phylogenic tree.
+
+```{r}
+data(Tengeler2020)
+tse2 <- Tengeler2020
+phylo_tree <- rowTree(tse2)
+phylo_tree
+```
+
 To create a hierarchy tree, `getHierarchyTree` used the information and returns a
 `phylo` object. Duplicate information from the `rowData` is removed.
 
