--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -87,6 +87,10 @@ key authors/contributors include:
 - *Jacques Serizay* converted the _OMA_ book to the `BiocBook` format. This 
 allows the _OMA_ book to be built and distributed by Bioconductor. 
 
+- *Himel Mallick, PhD, FASA*, principal investigator and tenure-track faculty at Cornell University’s Department of Population Health Sciences and an adjunct faculty of Statistics and Data Science at Bowers College of Computing and Information Science. He contributed to the chapters on meta-analyses, microbe set enrichment analysis (MSEA) and multi-omics prediction and classification.
+
+- *Yihan Liu*, assisted Dr. Mallick in writing the chapters on meta-anlayses, MSEA and multi-omics prediction and classification. 
+
 ### Acknowledgments {-}
 
 This work would not have been possible without the countless
