--- a/inst/pages/add-comm-typing.Rmd
+++ b/inst/pages/add-comm-typing.Rmd
@@ -63,7 +63,7 @@ data, is to run community detection algorithms after building a
 graph. The following demonstration builds a graph based on the k
 nearest-neighbors and performs the community detection on the fly.
 
-Here, we will be using the `cluster` function with a graph-based clustering 
+Here, we will be using the `addCluster` function with a graph-based clustering 
 function, enabling the community detection task.
 
 The algorithm used is "short random walks" [@Pons2006]. The graph is
@@ -88,7 +88,7 @@ k <- c(2, 3, 5, 10)
 
 ClustAndPlot <- function(x) {
     # Add the clustering data from the short random walks algorithm to the TSE
-    tse <- cluster(tse, assay.type = "rclr", 
+    tse <- addCluster(tse, assay.type = "rclr", 
                    MARGIN = "col", NNGraphParam(k = x))
     
     # Plot the results of the clustering as a color for each sample
@@ -117,7 +117,7 @@ about Silhouettes read [@Rousseeuw1987].
 ```{r NNGraph2, message=FALSE, warning=FALSE}
 ClustDiagPlot <- function(x) {
   # Get the clustering results
-    tse <- cluster(tse, assay.type = "rclr", 
+    tse <- addCluster(tse, assay.type = "rclr", 
                    MARGIN = "col", NNGraphParam(k = x))
 
     # Compute the diagnostic info
