correct importMetaPhlAn name

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -747,5 +747,5 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 * [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)  
 * [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)  
-* [importMetaphlan](https://microbiome.github.io/mia/reference/importMetaphlan.html)  
+* [importMetaPhlAn](https://microbiome.github.io/mia/reference/importMetaPhlAn.html)  
 * [importQZA](https://microbiome.github.io/mia/reference/importQIIME2.html)
