--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -211,7 +211,7 @@ functions explained in chapter [@sec-import-from-file]. You can also check the
    and read the instructions in its
    [README](https://github.com/microbiome/data#training-microbiome-datasets)
    to import and construct datasets from there.  
-2. Import data from another format (functions: importMetaphlan | importMothur | 
+2. Import data from another format (functions: importMetaPhlAn | importMothur | 
 importQIIME2 | makeTreeSummarizedExperimentFromBiom | 
 makeTreeSummarizedExperimentFromDADA2 ...)  
 3. Try out conversions between TreeSE and phyloseq data containers (makeTreeSummarizedExperimentFromPhyloseq; makephyloseqFromTreeSummarizedExperiment)  
