--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -376,9 +376,9 @@ However, such data are not always included.
 
 ### Subsetting
 
-1. Subset the TreeSE object to specific samples  
-2. Subset the TreeSE object to specific features  
-3. Subset the TreeSE object to specific samples and features  
+1. Subset the TreeSE object to specific samples.  
+2. Subset the TreeSE object to specific features.  
+3. Subset the TreeSE object to specific samples and features.  
 
 
 
