Fix issue 347 simplified ggplot usages

--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -256,11 +256,11 @@ plot the histogram of the clusters.
 ```{r taxa_clustering_histogram}
 library(ggplot2)
 library(patchwork) # TO arrange several plots as a grid
-plot1 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_euclidean)) +
+plot1 <- ggplot(rowData(tse), aes(x = clusters_euclidean)) +
     geom_bar() +
     labs(title = "CAG size distribution (Euclidean distance)",
          x = "Clusters", y = "Feature count (n)")
-plot2 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_kendall)) +
+plot2 <- ggplot(rowData(tse), aes(x = clusters_kendall)) +
     geom_bar() +
     labs(title = "CAG size distribution (1 - tau)",
          x = "Clusters", y = "Feature count (n)")
