--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -250,7 +250,7 @@ histogram (left), or by sorting the samples by library size (right).
 ```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library size distribution."}
 library(ggplot2)
 
-p1 <- ggplot(as.data.frame(colData(tse))) +
+p1 <- ggplot(colData(tse)) +
         geom_histogram(aes(x = sum), color = "black", fill = "gray", bins = 30) +
         labs(x = "Library size", y = "Frequency (n)") + 
         # scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), 
@@ -284,7 +284,6 @@ Library sizes other variables from `colData` can be
 visualized by using specified function called `plotColData`.
 
 ```{r plot-viz-lib-size-2, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
-library(ggplot2)
 # Sort samples by read count, order the factor levels, and store back to tse as DataFrame
 # TODO: plotColData could include an option for sorting samples based on colData variables
 colData(tse) <- as.data.frame(colData(tse)) %>%
