--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -98,9 +98,8 @@ passed to `ggplot`.
 
 ```{r}
 # store colData into a data frame
-coldata <- as.data.frame(colData(tse))
 # plot Number of Samples against Sampling Site
-ggplot(coldata, aes(x = SampleType)) +
+ggplot(colData(tse), aes(x = SampleType)) +
   geom_bar(width = 0.5) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   labs(x = "Sampling Site",
@@ -176,12 +175,11 @@ package is then exploited.
 # estimate faith diversity index
 tse <- mia::estimateFaith(tse,
                           assay.type = "counts")
-# store colData into a data frame
-coldata <- as.data.frame(colData(tse))
+
 # generate plots for shannon and faith indices
 # and store them into a list
 plots <- lapply(c("shannon", "faith"),
-                function(i) ggplot(coldata, aes_string(y = i)) +
+                function(i) ggplot(colData(tse), aes_string(y = i)) +
                   geom_boxplot() +
                   theme(axis.text.x = element_blank(),
                         axis.ticks.x = element_blank()))
