--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -357,12 +357,12 @@ row trees, respectively.
 
 ### Other elements
 
-Try to extract some of the other TreeSE elements listed in chapter [@sec-containers].
+Extract some of the other TreeSE elements listed in chapter [@sec-containers].
 However, such data are not always included.
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.  
-2. Fetch the metadata of the TreeSE. Is there any iformation available?  
+   and store it into a variable named `tse`.  
+2. Fetch the metadata of the TreeSE. Is there any information available?  
 3. Access the phylogenetic tree with `rowTree`. How big is it in terms of tips
    and nodes. If you like you can visualize it with `ggtree`.  
 4. Check if a sample tree is available with `colTree`, which is suitable for
@@ -376,9 +376,9 @@ However, such data are not always included.
 
 ### Subsetting
 
-1. Subset the TreeSE object to specific samples  
-2. Subset the TreeSE object to specific features  
-3. Subset the TreeSE object to specific samples and features  
+1. Subset the TreeSE object to specific samples.  
+2. Subset the TreeSE object to specific features.  
+3. Subset the TreeSE object to specific samples and features.  
 
 
 
@@ -451,7 +451,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 1. Import the mia package, load one of the example data sets mentioned in Chapter 3.3
    with `data` (you need one with taxonomic information) and store it into 
-   a variable named `tse`.  
+   a variable named `tse`. Can you find the same taxonomyRanks from rowData? 
 2. Check the taxonomic ranks of the features with `taxonomyRanks`. What is the
    deepest taxonomic rank available?  
 3. Agglomerate the TreeSE to each taxonomic rank and store the resulting
@@ -551,7 +551,7 @@ represent an important analysis in several studies.
 4. View the names of all available reduced dimensions with `reducedDimNames`.
    Has something new appeared?
 5. **Extra**: Access the `PCA` reducedDim object with `reducedDim` and explore
-   its content. How are the different dimensions stored? Try to extract an
+   its content. How are the different dimensions stored? Extract an
    array with only the values from the second dimension by indexing the object
    with `[ , 2]`.
 
