--- a/PackageInstallations_Troubleshoots.qmd
+++ b/PackageInstallations_Troubleshoots.qmd
@@ -80,7 +80,7 @@ BiocManager::install("mia")
 ```
 
 If the installations prompt to compile from source, you can answer yes,
-and hopefully it can be sucesfuly compiled. Good Luck!
+and hopefully it can be succesfuly compiled. Good Luck!
 
 Follow-up reading:
 
@@ -88,7 +88,7 @@ Follow-up reading:
 - https://medium.com/biosyntax/following-up-library-dependency-when-compiling-r-packages-89f191b9f227
 
 
-Session info at the time of writting
+Session info at the time of writing
 
 ```
 sessionInfo()
@@ -119,8 +119,7 @@ loaded via a namespace (and not attached):
 
 ## Linux user
 
-(to be added)
 
-For ubuntu package please see [here](https://packages.ubuntu.com/)
+For Ubuntu package please see [here](https://packages.ubuntu.com/)
 
 
