added section for plotExpression

--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -568,6 +568,32 @@ zicoseq_res %>%
   knitr::kable()
 ```
 
+## Visualizing DAA
+
+In order to visualize results in a differential abundance analysis, we can use the `plotExpression` function from the scater library. This will show a jitterplot with the given results. Here's an example :
+
+```{r visualize DAA}
+library(scater)
+
+#Let's store the top three taxa
+
+top_taxa <- ancombc2_out$res %>%
+  dplyr::select(starts_with("taxon")) %>%
+  head(3) %>%
+  unlist()
+
+#Creates jitter plots for each patient status colored by cohort
+plotExpression(
+  tse, top_taxa,
+  exprs_values = "relabundance",
+  x = "patient_status", colour_by = "cohort")
+
+
+
+```
+
+
+
 ## Additional resources
 
 DAA can be performed by several means. Although most of them provide similar
