--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -582,7 +582,7 @@ top_taxa <- ancombc2_out$res %>%
   head(3) %>%
   unlist()
 
-#Creates jitter plots for each patient status colored by cohort
+#Creates jitter plots for the top three taxa per patient status and colored by cohort
 plotExpression(
   tse, top_taxa,
   exprs_values = "relabundance",
