--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -570,26 +570,25 @@ zicoseq_res %>%
 
 ## Visualizing DAA
 
-In order to visualize results in a differential abundance analysis, we can use the `plotExpression` function from the scater library. This will show a jitterplot with the given results. Here's an example :
+In order to visualize results in a differential abundance analysis, 
+we can use the `plotExpression` function from the scater library. 
+This will show a jitterplot with the given results. Here's an example :
 
 ```{r visualize DAA}
 library(scater)
+# Finds taxa that passed the test 
+taxa_passed_test <- ancombc2_out$res[
+    ancombc2_out$res[["passed_ss_patient_statusControl"]] & 
+    ancombc2_out$res[["diff_patient_statusControl"]], 
+]
+# Stores the names of the top three taxa.
+top_taxa <- taxa_passed_test[1:3, 1]
 
-#Let's store the top three taxa
-
-top_taxa <- ancombc2_out$res %>%
-  dplyr::select(starts_with("taxon")) %>%
-  head(3) %>%
-  unlist()
-
-#Creates jitter plots for the top three taxa per patient status and colored by cohort
+# Creates jitter plots for each patient status colored by cohort
 plotExpression(
   tse, top_taxa,
-  exprs_values = "relabundance",
+  assay.type = "relabundance",
   x = "patient_status", colour_by = "cohort")
-
-
-
 ```
 
 
